aggiunto deleteconversation in backend e migliorate api
