# service/api/api-handler.go
@@ -35,5 +35,6 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/conversations", rt.wrap(rt.getMyConversationsHandler))
 	rt.router.GET("/conversations/:Conversation_id", rt.wrap(rt.getConversationHandler))
 	rt.router.POST("/conversations/conversation", rt.wrap(rt.checkOrCreateConversationHandler))
+	rt.router.DELETE("/conversations/:Conversation_id", rt.wrap(rt.deleteConversationHandler))
 	return rt.router
 }
